--- a/views/catalog/itempage.hbs
+++ b/views/catalog/itempage.hbs
@@ -10,7 +10,7 @@
         <header class="headernotmain">
             {{> navigationbar token=token}}
         </header>
-        {{> iteminfotable btnname = "В корзину" item = item token=../token}}
+        {{> iteminfotable btnname = "В корзину" item = item token=token}}
     </body>
 </html>
 <script>
