--- a/views/orders/shopcart.hbs
+++ b/views/orders/shopcart.hbs
@@ -15,7 +15,7 @@
                 {{/each}}
         </div>
 
-        <button name="{{type}}" id="submit" value="{{ID}}">Оформить</button>
+        <button class="upbtn" type="button" name="{{type}}" id="submit" value="{{ID}}">Оформить</button>
     </body>
 </html>
 <script>
