--- a/views/orders/orders.hbs
+++ b/views/orders/orders.hbs
@@ -12,7 +12,7 @@
         <div class="container products__container">
             <ul class="imdiz-products_row">
             {{#each orders}}
-                {{> order order=this token=token}} 
+                {{> order order=this token=../token}} 
             {{/each}}
             </ul>
         </div>
