--- a/views/partials/contract.hbs
+++ b/views/partials/contract.hbs
@@ -3,11 +3,11 @@
     <div class="imdiz-product__inner">                
         <div class="imdiz-product__info">
             <p class="imdiz-product__name">{{contract.contractID}}</p>
-            <!--<span class="imdiz-product__name">{{worker.workername}}</span>-->
-            <p class="imdiz-product__name">{{contractstatus.contractstatusname}}</p>
+            <p class="imdiz-product__name">{{contract.contractstatusname}}</p>
             <p class="imdiz-product__name">{{contract.contractdate}}</p>
-            <p class="imdiz-product__name">{{user.usersurname}}</p>
-            <!--<p class="imdiz-product__name">{{worker.workersurname}}</p>-->		
+            <p class="imdiz-product__name">{{contract.usersurname}} {{contract.username}}</p>
+            <p class="imdiz-product__name">{{contract.userlogin}}</p>
+            <p class="imdiz-product__name">{{contract.workersurname}} {{contract.workername}}</p>		
         </div>
     </div>
 </li>
