Инфо аренды/заказа и их парметры

--- a/views/partials/order.hbs
+++ b/views/partials/order.hbs
@@ -2,12 +2,12 @@
 <li class="imdiz-product">
     <div class="imdiz-product__inner">                
         <div class="imdiz-product__info">
-            <p class="imdiz-product__name">{{order.orderID}}</p>
-            <p class="imdiz-product__name">{{order.orderstatusname}}</p>
-            <p class="imdiz-product__name">{{order.orderdate}}</p>
-            <p class="imdiz-product__name">{{order.usersurname}} {{order.username}}</p>
-            <p class="imdiz-product__name">{{order.userlogin}}</p>
-            <p class="imdiz-product__name">{{order.workersurname}} {{order.workername}}</p>		
+            <p class="imdiz-product__name">ID заказа: {{order.orderID}}</p>
+            <p class="imdiz-product__name">Статус заказа: {{order.orderstatusname}}</p>
+            <p class="imdiz-product__name">Дата заказа: {{order.orderdate}}</p>
+            <p class="imdiz-product__name">ФИО покупателя: {{order.usersurname}} {{order.username}}</p>
+            <p class="imdiz-product__name">Логин покупателя: {{order.userlogin}}</p>
+            <p class="imdiz-product__name">ФИО работника: {{order.workersurname}} {{order.workername}}</p>		
         </div>
     </div>
 </li>
