--- a/views/catalog/catalog.hbs
+++ b/views/catalog/catalog.hbs
@@ -22,8 +22,8 @@
 </html>
 
 <script>
-    var btn = document.getElementById("order-btn");
-    if(btn)
+    const btns = document.querySelectorAll('.order-btn');
+    btns.forEach(async function(btn) { 
     btn.onclick = async function(){
         var id = btn.value;
         var data ={ID: id};
@@ -32,5 +32,6 @@
             body: JSON.stringify(data),
             headers: {'Content-Type': 'application/json'}
         });
-    }
+        }
+    });
 </script>
