--- a/views/catalog/catalog.hbs
+++ b/views/catalog/catalog.hbs
@@ -22,7 +22,7 @@
 </html>
 
 <script>
-    const btns = document.querySelectorAll('.order-btn');
+    const btns = document.querySelectorAll('#order-btn');
     btns.forEach(async function(btn) { 
     btn.onclick = async function(){
         var id = btn.value;
