--- a/views/partials/contract.hbs
+++ b/views/partials/contract.hbs
@@ -2,12 +2,12 @@
 <li class="imdiz-product">
     <div class="imdiz-product__inner">                
         <div class="imdiz-product__info">
-            <p class="imdiz-product__name">{{contract.contractID}}</p>
-            <p class="imdiz-product__name">{{contract.contractstatusname}}</p>
-            <p class="imdiz-product__name">{{contract.contractdate}}</p>
-            <p class="imdiz-product__name">{{contract.usersurname}} {{contract.username}}</p>
-            <p class="imdiz-product__name">{{contract.userlogin}}</p>
-            <p class="imdiz-product__name">{{contract.workersurname}} {{contract.workername}}</p>		
+            <p class="imdiz-product__name">ID контракта: {{contract.contractID}}</p>
+            <p class="imdiz-product__name">Статус контракта: {{contract.contractstatusname}}</p>
+            <p class="imdiz-product__name">Дата контракта: {{contract.contractdate}}</p>
+            <p class="imdiz-product__name">ФИО заказчика: {{contract.usersurname}} {{contract.username}}</p>
+            <p class="imdiz-product__name">Логин заказчика: {{contract.userlogin}}</p>
+            <p class="imdiz-product__name">ФИО работника: {{contract.workersurname}} {{contract.workername}}</p>		
         </div>
     </div>
 </li>
