--- a/views/contracts/contractinfo.hbs
+++ b/views/contracts/contractinfo.hbs
@@ -2,71 +2,65 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" href="/../css/privatedata.css">
     <link rel="stylesheet" href="/../css/style.css">
-	<link rel="stylesheet" href="/../css/iteminshopcart.css">
+	<link rel="stylesheet" href="/../css/roparameters.css">
 </head>
 	<body>	
 		<header class="headernotmain">		
 			{{> navigationbar token=token}}
 		</header>
-
         {{#isGreater token.role "0"}}<a href="/roparameters"><button class="upbtn">Редактировать параметры</button></a>{{/isGreater}}
-
-		<div class="data-container">
-			<div class="grid">
-				<div class="maininfo">
-					<input hidden id="id" value="{{user.userID}}">
-					<table>
-						<caption><b>Информация о заказе:</b></caption>
-						<tr>
-							<td>ФИО заказчика:</td>
-							<td><input readonly name="input" value="{{contract.usersurname}} {{contract.username}} {{contract.usermidname}}"></td>
-						</tr>
-						<tr>
-							<td>Логин заказчика:</td>
-							<td><input readonly name="input" value="{{contract.usersurname}}"></td>
-						</tr>
-                        <tr>
-							<td>ФИО работника:</td>
-							<td>
-								<select {{attribute}} name="input" id="worker">
-									<option value = "{{contract.workerID}}">{{contract.workersurname}} {{contract.workername}} {{contract.workermidname}}</option>
-								{{#isGreater token.role "1"}}
-                                {{#each workers}}
-                                    <option value = "{{this.workerID}}">{{this.workersurname}} {{this.workername}} {{this.workermidname}}</option>
-                                {{/each}}
-								{{/isGreater}}
-                            	</select>
-							</td>
-						</tr>
-						<tr>
-							<td>Статус:</td>
-							<td>
-								<select {{attribute}} name="input" id="status">
-									<option value = "{{contract.contractstatusID}}">{{contract.contractstatusname}}</option>
-                                {{#each contractstatuses}}
-                                    <option value = "{{this.contractstatusID}}">{{this.contractstatusname}}</option>
-                                {{/each}}
-                            	</select>
-							</td>
-						</tr>
-                        <tr>
-							<td>Дата заказа:</td>
-							<td><input readonly  type="date" name="input" value="{{order.orderdate}}"></td>
-						</tr>
-					</table>
-				</div>
-			</div>    
+		<div class="maininfo">
+			<input hidden id="id" value="{{user.userID}}">
+			<table>
+				<caption><b>Информация о заказе:</b></caption>
+				<tr>
+					<td>ФИО заказчика:</td>
+					<td><input readonly name="input" value="{{contract.usersurname}} {{contract.username}} {{contract.usermidname}}"></td>
+				</tr>
+				<tr>
+					<td>Логин заказчика:</td>
+					<td><input readonly name="input" value="{{contract.usersurname}}"></td>
+				</tr>
+				<tr>
+					<td>ФИО работника:</td>
+					<td>
+						<select {{attribute}} name="input" id="worker">
+							<option value = "{{contract.workerID}}">{{contract.workersurname}} {{contract.workername}} {{contract.workermidname}}</option>
+						{{#isGreater token.role "1"}}
+						{{#each workers}}
+							<option value = "{{this.workerID}}">{{this.workersurname}} {{this.workername}} {{this.workermidname}}</option>
+						{{/each}}
+						{{/isGreater}}
+						</select>
+					</td>
+				</tr>
+				<tr>
+					<td>Статус:</td>
+					<td>
+						<select {{attribute}} name="input" id="status">
+							<option value = "{{contract.contractstatusID}}">{{contract.contractstatusname}}</option>
+						{{#each contractstatuses}}
+							<option value = "{{this.contractstatusID}}">{{this.contractstatusname}}</option>
+						{{/each}}
+						</select>
+					</td>
+				</tr>
+				<tr>
+					<td>Дата заказа:</td>
+					<td><input readonly  type="date" name="input" value="{{order.orderdate}}"></td>
+				</tr>
+			</table>
+			{{#isGreater token.role "0"}}<button class="upbtn1" id="update-btn" value="{{contract.contractID}}">Сохранить</button>{{/isGreater}}
+		</div>   
         <div class="item">
             {{#each items}}
                 {{> iteminshopcart item=this token=../token}} 
             {{/each}}
-        </div>
-		{{#isGreater token.role "0"}}<button class="upbtn1" id="update-btn" value="{{contract.contractID}}">Сохранить</button>{{/isGreater}}     
-		</div>  		
+        </div>  		
 	</body>
 </html>
+
 <script>
 	var btn = document.getElementById("update-btn");
 	if(btn)
