--- a/views/contracts/contractinfo.hbs
+++ b/views/contracts/contractinfo.hbs
@@ -55,7 +55,7 @@
 		</div>   
         <div class="item">
             {{#each items}}
-                {{> iteminshopcart item=this token=../token}} 
+                {{> iteminshopcart item=this token=../token check="true"}} 
             {{/each}}
         </div>  		
 	</body>
