--- a/views/orders/orderinfo.hbs
+++ b/views/orders/orderinfo.hbs
@@ -56,7 +56,7 @@
 		</div>  
         <div class="item">
             {{#each items}}
-                {{> iteminshopcart item=this token=../token}} 
+                {{> iteminshopcart item=this token=../token check="true"}} 
             {{/each}}
         </div> 		
 	</body>
