--- a/public/css/privatedata.css
+++ b/public/css/privatedata.css
@@ -48,18 +48,17 @@ table {
     width: 380px;
 }
 
-button {
-    border: none;
-    outline: none;
-    display: inline-block;
-    text-align: center;
-    text-decoration: none;
-    cursor: pointer;
-    font-size: 15px;
-    font-family: "Ubuntu", sans;
-    margin-top: auto;
-    margin-left: 77%;
-    border-radius: 5px;
-    background: linear-gradient(rgba(35, 41, 214, 0.8), rgba(130, 35, 177, 0.4));
+.upbtn1{
+    color:rgb(255, 255, 255);
+	background:  rgba(186, 186, 195, 0.4);
+	outline: none;
+    border: 0;
     color: rgb(255, 255, 255);
+	padding:5px 10px;
+	text-transform:none;
+    margin-bottom: 1%;
+    margin-left: 72%;
+	border-radius:2px;
+	cursor:pointer;
+	position:relative;
 }
