--- a/views/contracts/contractinfo.hbs
+++ b/views/contracts/contractinfo.hbs
@@ -13,13 +13,13 @@
 		<div class="maininfo">
 			<input hidden id="id" value="{{user.userID}}">
 			<table>
-				<caption><b>Информация о заказе:</b></caption>
+				<caption><b>Информация об аренде:</b></caption>
 				<tr>
-					<td>ФИО заказчика:</td>
+					<td>ФИО арендатора:</td>
 					<td><input readonly name="input" value="{{contract.usersurname}} {{contract.username}} {{contract.usermidname}}"></td>
 				</tr>
 				<tr>
-					<td>Логин заказчика:</td>
+					<td>Логин арендатора:</td>
 					<td><input readonly name="input" value="{{contract.usersurname}}"></td>
 				</tr>
 				<tr>
