--- a/views/lk/privatedata.hbs
+++ b/views/lk/privatedata.hbs
@@ -50,7 +50,7 @@
 					</table>
 				</div>
 			</div>    
-		<button id="update-button">Сохранить</button>         
+		<button class="upbtn1" id="update-button">Сохранить</button>         
 		</div>  		
 	</body>
 </html>
