--- a/views/partials/contract.hbs
+++ b/views/partials/contract.hbs
@@ -5,8 +5,8 @@
             <p class="imdiz-product__name">ID контракта: {{contract.contractID}}</p>
             <p class="imdiz-product__name">Статус контракта: {{contract.contractstatusname}}</p>
             <p class="imdiz-product__name">Дата контракта: {{contract.contractdate}}</p>
-            <p class="imdiz-product__name">ФИО заказчика: {{contract.usersurname}} {{contract.username}}</p>
-            <p class="imdiz-product__name">Логин заказчика: {{contract.userlogin}}</p>
+            <p class="imdiz-product__name">ФИО арендатора: {{contract.usersurname}} {{contract.username}}</p>
+            <p class="imdiz-product__name">Логин арендатора: {{contract.userlogin}}</p>
             <p class="imdiz-product__name">ФИО работника: {{contract.workersurname}} {{contract.workername}}</p>		
         </div>
     </div>
