--- a/views/partials/navigationbar.hbs
+++ b/views/partials/navigationbar.hbs
@@ -10,6 +10,7 @@
 			{{#isGreater token.role "0"}}<li><a class="link" href="/contracts">Контракты</a></li>{{/isGreater}}
 			{{#isEquals token.role "0"}}<li><a class="link" href="/aboutus">О нас</a></li>{{/isEquals}}
 			{{#isGreater token.role "1"}}<li><a class="link" href="/workers">Работники</a></li>{{/isGreater}}
+			{{#isGreater token.role "1"}}<li><a class="link" href="/admins">Админы</a></li>{{/isGreater}}
 		</ul>
 	</div>
 </div>
