--- a/views/admins/admins.hbs
+++ b/views/admins/admins.hbs
@@ -3,14 +3,14 @@
 <head>
 	<meta charset="UTF-8">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/autosize.js/4.0.2/autosize.min.js"></script>
-	<link rel="stylesheet" href="/../css/parameters.css">
+	<link rel="stylesheet" href="/../css/admins.css">
     <link rel="stylesheet" href="/../css/style.css">
 </head>
 	<body>	
         <header class="headernotmain">
         {{> navigationbar}}
         </header>        
-        <a href="/admins/admin/create" class="create_href"><button class="create-button">Добавить админа</button></a>
+        <a href="/admins/admin/create" class="create_href"><button class="upbtn">Добавить админа</button></a>
         <div class="grid">
             <div class="box">
                 <table>
@@ -32,7 +32,6 @@
                 {{/each}}
                 </table>
             </div>
-            
         </div>
 	</body>
 </html>
