--- a/views/admins/create.hbs
+++ b/views/admins/create.hbs
@@ -31,7 +31,7 @@
 					</table>              
 				</div>
 			</div>
-		<button name="create" id="update-button">Создать</button>
+		<button class="upbtn1" name="create" id="update-button">Создать</button>
 		</div>		
 	</body>
 </html>
