--- a/public/css/privatedata.css
+++ b/public/css/privatedata.css
@@ -1,7 +1,7 @@
 .data-container {
     opacity: 0.7;
     width: 500px;
-    height:550px;
+    height:auto;
     float: left;
     background: #0027d4;
     border: solid 1px grey;
@@ -36,7 +36,7 @@
 }
 /* внешние границы таблицы серого цвета толщиной 1px */
 table {
-    padding-top: 55px;
+    padding-top: 10px;
     /*border: 1px solid grey;*/
  }
  
